# Omega

./: CMakeLists.txt  game_design_doc.txt  line_count.sh  line_count_history.txt  main.c  vcpkg.json
game/: board.c  board.h
renderer/: opengl_renderer.c  opengl_renderer.h  opengl_shader.c  opengl_texture.c
resources/shaders/: board_borders.frag  board_borders.vert  board_fill.frag  board_fill.vert  board_outline.frag  board_outline.vert  planets.frag  planets_tmp.frag  star_background.frag  star_background.vert  sun.vert
save/: save.omg
src/: game.c  game.h  main.c
src/game/: board.c  board.h  game.c  game.h  loader.c  loader.h
src/objects/: board.c  board.h  planets.c  planets.h  planets_shader.c  planets_shader.h  star_background.c  star_background.h  text.c  text.h  units.c  units.h
src/platform/: glfw_platform.c  platform.c  platform.h
src/players/: ai_actions.c  ai_actions.h  players.c  players.h  resources.c  resources.h
src/renderer/: camera.c  camera.h  opengl_freetype_wrapper.c  opengl_freetype_wrapper.h  opengl_renderer.c  opengl_renderer.h  opengl_shader.c  opengl_shader.h  opengl_texture.c  opengl_texture.h
src/scenes/: main_game_scene.c  main_game_scene.h  main_menu_scene.c  main_menu_scene.h  scene_state.c  scene_state.h
src/ui/: nuklear_config.c  nuklear_config.h
src/util/: dynamic_array.c  dynamic_array.h  file_helpers.c  file_helpers.h  general_helpers.c  general_helpers.h
tst/: main.c
